# test-repo2

bridgarr-backend/Bridgarr-bridgarr-backend-9d6e0ac9e71f026092b250fd07e3347c6847252c/: Makefile  Procfile  README.md  gunicorn.conf.py  injectenv  manage.py  pyproject.toml
bridgarr-backend/Bridgarr-bridgarr-backend-9d6e0ac9e71f026092b250fd07e3347c6847252c/config/: asgi.py  env.py  gravatar.py  plunk.py  urls.py  utils.py  wsgi.py
bridgarr-backend/Bridgarr-bridgarr-backend-9d6e0ac9e71f026092b250fd07e3347c6847252c/config/settings/: base.py  development.py  production.py  test.py
bridgarr-backend/Bridgarr-bridgarr-backend-9d6e0ac9e71f026092b250fd07e3347c6847252c/config/templates/email/: activation.html  confirmation.html  password_reset.html
