[tool.poetry]
name = "bridgarr-backend"
version = "0.0.1"
description = "The Backend For Bridgarr.com"
authors = ["Dave Mcsavvy <davemcsavvii@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.2"
djangorestframework = "^3.15.2"
djoser = "^2.2.3"
djangorestframework-simplejwt = "^5.3.1"
social-auth-app-django = "^5.4.2"
python-dotenv = "^1.0.1"
django-extensions = "^3.2.3"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^8.0.0"}
django-unfold = "^0.40.0"
drf-spectacular = "^0.27.2"
django-cors-headers = "^4.5.0"
gunicorn = "^23.0.0"
whitenoise = "^6.7.0"
psycopg2 = "^2.9.10"
dj-database-url = "^2.3.0"
django-backblaze-b2 = "^6.0.2"
pillow = "^11.0.0"
python-ms = "^1.1.1"


[tool.poetry.group.dev.dependencies]
faker = "^30.6.0"
ipython = "^8.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py310"
exclude = [
    ".git",
    "__pycache__",
    "migrations",
    ".venv",
    ".vscode",
    ".ruff_cache",
    ".mypy_cache",
    ".pytest_cache",
    "*.ipynb"
]

[tool.mypy]
ignore_missing_imports = true
